--- a/server/reporting_system/requirements.txt
+++ b/server/reporting_system/requirements.txt
@@ -14,6 +14,7 @@ django-celery-beat==2.6.0
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 drf-yasg==1.21.7
+gunicorn==22.0.0
 inflection==0.5.1
 kombu==5.3.7
 packaging==24.0
