--- a/server/reporting_system/requirements.txt
+++ b/server/reporting_system/requirements.txt
@@ -11,6 +11,7 @@ cron-descriptor==1.4.3
 dj-database-url==2.1.0
 Django==5.0.6
 django-celery-beat==2.6.0
+django-heroku==0.3.1
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 drf-yasg==1.21.7
@@ -33,3 +34,4 @@ tzdata==2024.1
 uritemplate==4.1.1
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.6.0
